tablet: add TabletMetadataManager
In the same spirit of decoupling metadata from their underlying storage,
this patch follows ConsensusMetadataManager's lead by implementing a
TabletMetadataManager. All methods in TabletMetadata that currently
touch files now do so through the TabletMetadataManager.

I've kept around the APIs that I think are core to how we use tablet
metadata, namely:
- pinning/unpinning flushes so we don't attempt to store when we don't
  want to (i.e. when we're bootstrapping)
- Updating the list of rowsets/blocks
  - adding and removing rowsets, and persisting the change
  - updating a specific rowset
  - updating the list of orphaned blocks
- switching to delete state, and adding and persisting orphaned blocks

Change-Id: If664082cca3ae2e20f74364a15533d13f99a7757

--- a/src/kudu/tablet/CMakeLists.txt
+++ b/src/kudu/tablet/CMakeLists.txt
@@ -44,6 +44,7 @@ set(TABLET_SRCS
   rowset_tree.cc
   svg_dump.cc
   tablet_metadata.cc
+  tablet_metadata_manager.cc
   rowset_metadata.cc
   deltafile.cc
   deltamemstore.cc
@@ -109,6 +110,7 @@ ADD_KUDU_TEST(tablet-schema-test)
 ADD_KUDU_TEST(tablet-test)
 ADD_KUDU_TEST(tablet_bootstrap-test)
 ADD_KUDU_TEST(tablet_history_gc-test)
+ADD_KUDU_TEST(tablet_metadata-stress-test)
 ADD_KUDU_TEST(tablet_metadata-test)
 ADD_KUDU_TEST(tablet_mm_ops-test)
 ADD_KUDU_TEST(tablet_random_access-test)
