WIP: Tool to read a cfile directly
Example usage:
kudu file read tmp/cfile-block.data

Change-Id: Ie902fa931ad3a111ec9432bc1c99f2f0d5f021b8

--- a/src/kudu/tools/CMakeLists.txt
+++ b/src/kudu/tools/CMakeLists.txt
@@ -102,6 +102,7 @@ target_link_libraries(kudu_tools_rebalance
 add_executable(kudu
   tool_action_cluster.cc
   tool_action_diagnose.cc
+  tool_action_file.cc
   tool_action_fs.cc
   tool_action_hms.cc
   tool_action_local_replica.cc
