example: Kudu metrics app
- parses JSON from the metrics endpoints

TODO:
- stick results into KuduPartialRow or equivalent
- insert rows into Kudu
- CreateIfNotExists a metrics table
- periodically add/drop ranges

Change-Id: Ib2883fb5c445d8704ef2b03701b543b73d779de9

--- a/java/kudu-spark/build.gradle
+++ b/java/kudu-spark/build.gradle
@@ -20,12 +20,15 @@ apply from: "$rootDir/gradle/shadow.gradle"
 
 dependencies {
   compile project(path: ":kudu-client", configuration: "shadow")
+  compile group: 'io.circe', name: 'circe-core_2.11', version: '0.11.1'
+  compile group: 'io.circe', name: 'circe-parser_2.11', version: '0.11.1'
   compile libs.hdrhistogram
   // TODO(KUDU-2500): Spark uses reflection which requires the annotations at runtime.
   compile libs.yetusAnnotations
 
   provided libs.scalaLibrary
   provided libs.sparkCore
+  provided libs.sparkStreaming
   provided libs.sparkSql
   provided libs.slf4jApi
 
