--- a/java/gradle/dependencies.gradle
+++ b/java/gradle/dependencies.gradle
@@ -116,6 +116,7 @@ libs += [
     slf4jApi             : "org.slf4j:slf4j-api:$versions.slf4j",
     sparkAvro            : "org.apache.spark:spark-avro_$versions.scalaBase:$versions.spark",
     sparkCore            : "org.apache.spark:spark-core_$versions.scalaBase:$versions.spark",
+    sparkStreaming       : "org.apache.spark:spark-streaming_$versions.scalaBase:$versions.spark",
     sparkSql             : "org.apache.spark:spark-sql_$versions.scalaBase:$versions.spark",
     sparkSqlTest         : "org.apache.spark:spark-sql_$versions.scalaBase:$versions.spark:tests",
     yetusAnnotations     : "org.apache.yetus:audience-annotations:$versions.yetus"
