[wip] KUDU-2971 p3: concurrent requests support for subprocess
This patch adds a subprocess server to support multiple requests at a
time. The subprocess client can post request messages to a blocking
queue and a dedicated thread in the server waiting on the queue and
send the message to the underlying subprocess once getting one. The
server has another dedicated thread blocks on receiving messages from
the subprocess, and notifies the client the response with the matching
message ID.

TODO: add more tests for the server, add a dummy client for test, add
retry logic in the client.

Change-Id: I6fddbc389d8c3582bda301b9390700068e3806b2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,7 @@ set(THIRDPARTY_INSTALL_DIR ${THIRDPARTY_DIR}/installed)
 set(THIRDPARTY_INSTALL_COMMON_DIR ${THIRDPARTY_INSTALL_DIR}/common)
 set(THIRDPARTY_INSTALL_UNINSTRUMENTED_DIR ${THIRDPARTY_INSTALL_DIR}/uninstrumented)
 set(THIRDPARTY_INSTALL_TSAN_DIR ${THIRDPARTY_INSTALL_DIR}/tsan)
+set(JAVA_DIR ${CMAKE_CURRENT_SOURCE_DIR}/java)
 
 # Allow "make install" to not depend on all targets.
 #
