KUDU-2975: Spread WAL across multiple directories
Add a new gflag named "fs_wal_dirs" to support spreading WAL across
multiple directories.

Use a new class named "WalDirManager" to manage the WAL dirs. Every WAL
directory has an UUID, We record the directory's UUID and all
directories's UUIDs into a file named "wal_manager_instance". We also record
the tablet's WAL directory UUID into the tablet's metadata. We determine the
tablet WAL location based on the dir UUID recorded in metadata at
reboot.

// TODO: fix this
If switch 'fs_wal_dir' to 'fs_wal_dirs', first we need use "kudu fs
update_dirs" tool to update the WAL dir. We should make sure that the
new configuration includes the old ones, otherwise some tablets may be
failed after startup.

Because the tablet's metadata in old version had no WAL directory, we
look for the tablet's WAL directory under all the new WAL directories.
If found, we write the tablet's WAL into WalDirManager. We'll first
register the WAL directory in memory, and the next time the metadata is
flushed, the UUID is persisted to disk.

In this version, one of the WAL directorys's structure looks like this:

  wal
  - instance
  - wals
  -- wal_manager_instance
  -- tablet1_uuid
  --- index.0
  --- wal.0
  -- tablet2_uuid
  --- index.0
  --- wal.0

Some WAL directories are allowed to be missing at startup. Or some disks
that hold WAL are allowed to be failed at startup. If the tablets
located on failed WAL directories, they can be recovered by master.

Change-Id: Ic3490b2bbc0544e7c8a5f987fb83855ff155ac2c

--- a/src/kudu/fs/CMakeLists.txt
+++ b/src/kudu/fs/CMakeLists.txt
@@ -36,7 +36,8 @@ add_library(kudu_fs
   file_block_manager.cc
   fs_manager.cc
   fs_report.cc
-  log_block_manager.cc)
+  log_block_manager.cc
+  wal_dirs.cc)
 
 target_link_libraries(kudu_fs
   fs_proto
@@ -60,6 +61,7 @@ ADD_KUDU_TEST(data_dirs-test)
 ADD_KUDU_TEST(dir_util-test)
 ADD_KUDU_TEST(error_manager-test)
 ADD_KUDU_TEST(fs_manager-test)
+ADD_KUDU_TEST(wal_dirs-test)
 if (NOT APPLE)
   # Will only pass on Linux.
   ADD_KUDU_TEST(log_block_manager-test)
