[wip] ranger: set up MiniRanger
I'm opting to not use the setup.sh script [1] included with Ranger since
it touches various system-wide files in /etc. Instead, I'm drawing
inspiration from Impala's Ranger setup [2].

The actual starting of the Ranger admin service is inspired by the
script included with Ranger [3], which I opted to not use mostly for
aesthetic reasons.

Got to a point where I successfully create the Ranger database in
Postgres, but haven't tried making any calls in Ranger yet.

Also configs will likely need to be adjusted for some reason or other --
they're pretty minimal at the moment.

Also haven't found a good way to initialize things without having to
'sudo -u postgres' which doesn't feel great.

After running StartStopRanger, I can run the following locally:

[awong@va1022 debug]$ sudo -u postgres ./bin/postgres/psql -p <port>
ranger=# \c ranger
psql (12.2)
Type "help" for help.

ranger=# \c ranger
You are now connected to database "ranger" as user "postgres".
ranger=# \d
                        List of relations
 Schema |              Name              |   Type   |    Owner
--------+--------------------------------+----------+-------------
 public | vx_trx_log                     | view     | rangeradmin
 public | x_access_type_def              | table    | rangeradmin
 public | x_access_type_def_grants       | table    | rangeradmin
 public | x_access_type_def_grants_seq   | sequence | rangeradmin
 public | x_access_type_def_seq          | sequence | rangeradmin
 public | x_asset                        | table    | rangeradmin
 public | x_asset_seq                    | sequence | rangeradmin
 public | x_audit_map                    | table    | rangeradmin
 public | x_audit_map_seq                | sequence | rangeradmin
 public | x_auth_sess                    | table    | rangeradmin
 public | x_auth_sess_seq                | sequence | rangeradmin
 public | x_context_enricher_def         | table    | rangeradmin
 public | x_context_enriche

--- a/src/kudu/ranger/CMakeLists.txt
+++ b/src/kudu/ranger/CMakeLists.txt
@@ -32,6 +32,14 @@ target_link_libraries(ranger_proto
   protobuf
 )
 
+add_library(mini_postgres
+  mini_postgres.cc)
+target_link_libraries(mini_postgres
+  gutil
+  kudu_test_util
+  kudu_util
+)
+
 #######################################
 # kudu_ranger
 #######################################
@@ -67,6 +75,7 @@ execute_process(COMMAND ln -nsf
   "${CMAKE_SOURCE_DIR}/thirdparty/installed/common/bin"
   "${EXECUTABLE_OUTPUT_PATH}/postgres")
 
+# need to chmod +x thirdparty/src/postgresql-42.2.10/postgresql-42.2.10.jar
 execute_process(COMMAND ln -nsf
   "${CMAKE_SOURCE_DIR}/thirdparty/installed/common/opt/jdbc/postgresql.jar"
   "${EXECUTABLE_OUTPUT_PATH}/postgres/")
@@ -85,8 +94,8 @@ set(MINI_RANGER_SRCS
   mini_ranger.cc)
 set(MINI_RANGER_DEPS
   kudu_test_util
-  kudu_util)
-
+  kudu_util
+  mini_postgres)
 add_library(mini_ranger ${MINI_RANGER_SRCS})
 target_link_libraries(mini_ranger ${MINI_RANGER_DEPS})
 
@@ -96,7 +105,8 @@ target_link_libraries(mini_ranger ${MINI_RANGER_DEPS})
 
 SET_KUDU_TEST_LINK_LIBS(
   mini_ranger
-  kudu_ranger)
+  kudu_ranger
+  mini_postgres)
 
 ADD_KUDU_TEST(mini_ranger-test)
 ADD_KUDU_TEST(ranger_client-test)
