tablet: implement atomic delta stores
Delta iteration is reused for a few key purposes:
- Scans: we care about applying the deltas to already-materialized
  column blocks.
- Diff scans: we care about returning the deltas between two time points
  as a new row, or as a row with the IS_DELETED column set to true.
- Minor delta compactions: we care about collecting the mutations,
  putting all deltas in the input stores into the output stores.

We have the following requirements:
- Atomically delete multiple delta stores in case of abort.
- Allow iteration over a set of delta stores such that the entire set of
  mutations is visible at a single timestamp (i.e. the iteration should
  be "atomic").
- Allow iteration over delta stores to enforce timestamp ordering.

TODO: think about WAL replay and anchoring requirements

Change-Id: I1556542018e40d909ed82acfa1fc0e5ed8a74e35

--- a/src/kudu/tablet/CMakeLists.txt
+++ b/src/kudu/tablet/CMakeLists.txt
@@ -45,6 +45,7 @@ set(TABLET_SRCS
   svg_dump.cc
   tablet_metadata.cc
   rowset_metadata.cc
+  atomic_deltas.cc
   deltafile.cc
   deltamemstore.cc
   delta_applier.cc
@@ -53,6 +54,7 @@ set(TABLET_SRCS
   delta_stats.cc
   delta_store.cc
   delta_tracker.cc
+  ordered_delta_iter_merger.cc
 )
 
 PROTOBUF_GENERATE_CPP(
